--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,6 +1,6 @@
 .footer-bar {
     height: 400px;
-    padding: 8rem;
+    padding: 80px;
   
     background: linear-gradient(rgba(0,0,0,0.5),
       rgba(0,0,0,0.5)),
@@ -46,3 +46,25 @@
   .footer__list-item:active {
     color: $main_color;
   }
+  @media(max-width: 460px) {
+    .footer-bar {
+      height: 100%;
+      padding: 10px;
+    
+      background: linear-gradient(rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)),
+        url('../images/wellness-589774_1920.jpg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+    
+      color: white;
+      
+  }
+  .footer__nav__list {
+    flex-direction: column;
+    flex-wrap: nowrap;
+
+    height: 100%;
+  }
+    }
