--- a/scss/index-page/about.scss
+++ b/scss/index-page/about.scss
@@ -5,11 +5,12 @@
 
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
 }
 .about__wrapper {
   align-self: center;
   flex-basis: 40%;
+  margin-bottom: 20px;
 }
 
 .about__me__img__wrapper {
@@ -46,7 +47,27 @@
     height: 100%;
   }
 }
-
+@media(max-width: 460px) {
+  .about-us{
+    padding: 20px;
+  }
+  .about__me-1 {
+    width: 100%;
+    height: 300px;
+    background-image: url('../images/man-2037255_640.jpg');
+    background-size: cover;
+    background-position: 50% 90%;
+    align-self: flex-start;
+  }
+  .about__me-2 {
+    width: 100%;
+    height: 300px;
+    background-image: url('../images/people-2563491_640.jpg');
+    background-size: cover;
+    background-position: 50% 90%;
+    align-self: flex-end;
+  }
+  }
 
 
 
